<resources>
    <string name="app_name">도레미마켓\n(베타)</string>

    // navigation
    <string name="navigation_home">홈</string>
    <string name="navigation_register">등록</string>
    <string name="navigation_chatting">채팅</string>
    <string name="navigation_mypage">마이페이지</string>

    // toolbar title
    <string name="title_write">중고거래 글쓰기</string>
    <string name="title_alarm">알림</string>
    <string name="title_category">카테고리</string>

    // text holder
    <string name="dot">·</string>
    <string name="won">₩</string>

    // hint
    <string name="hint_category">카테고리</string>
    <string name="hint_title">제목</string>
    <string name="hint_product_description">브랜드, 사이즈, 색상, 소재 등 물품에 대한 자세한 정보를 작성하면 판매확률이 올라가요!</string>
    <string name="hint_price">가격</string>
    <string name="hint_chat">메시지를 입력하세요</string>
    <string name="hint_search">검색</string>
    <string name="hint_need_input">%s를 입력해주세요</string>

    // string
    <string name="string_submit">완료</string>
    <string name="string_submit_success">등록 완료!</string>

    // join
    <string name="join_title">로그인/회원가입</string>
    <string name="join_welcome">도레미 마켓에 오신 것을\n환영합니다!</string>
    <string name="join_input_info">기본 정보를 확인하고\n잘못된 정보는 수정해주세요</string>

    // splash
    <string name="splash_text">가장 가까이에서\n시작되는 ESG,\n도레미 마켓!</string>

    // dialog
    <string name="dialog_exception">현재 접속자가 많아 지연이 발생하고 있습니다\n잠시 후 재접속 부탁드립니다.</string>
    <string name="dialog_coming_soon">준비 중입니다!</string>
    <string name="dialog_close">닫기</string>

</resources>