<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.github.sookhee.shinhanesgmarket.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registerTitle"
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_write"
            app:layout_constraintBottom_toTopOf="@id/toolbarGuideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/string_submit"
            android:textColor="@color/blue"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/toolbarGuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/toolbarGuideLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="56dp"
            android:background="@color/gray100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarGuideLine">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/photoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/btnAddPhoto"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/gray_border_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/photoIcon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginBottom="4dp"
                            android:src="@drawable/ic_camera" />

                        <TextView
                            android:id="@+id/photoCountText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0/10" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>

                <View
                    android:id="@+id/photoGuideLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray100" />

                <EditText
                    android:id="@+id/titleEditText"
                    style="@style/Gray900"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:background="@null"
                    android:hint="@string/hint_title"
                    android:text="@={vm.title}"
                    android:textColorHint="@color/gray300"
                    android:theme="@style/EditTextTheme" />

                <View
                    android:id="@+id/titleGuideLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray100" />

                <LinearLayout
                    android:id="@+id/categoryLayout"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Gray900.17"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hint_category" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_arrow_down" />
                </LinearLayout>

                <View
                    android:id="@+id/categoryGuideLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray100" />

                <LinearLayout
                    android:id="@+id/priceLayout"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/priceHolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/won"
                        android:textColor="@color/gray300"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/priceEditText"
                        style="@style/Gray900.17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:background="@null"
                        android:hint="@string/hint_price"
                        android:inputType="number"
                        android:text="@={vm.price}"
                        android:textColorHint="@color/gray300"
                        android:theme="@style/EditTextTheme" />
                </LinearLayout>

                <View
                    android:id="@+id/priceGuideLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray100" />

                <EditText
                    android:id="@+id/mainEditText"
                    style="@style/BaseTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:background="@null"
                    android:hint="@string/hint_product_description"
                    android:text="@={vm.content}"
                    android:textColorHint="@color/gray300"
                    android:theme="@style/EditTextTheme" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>