<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/chatting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/chattingImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_chat_off" />

            <TextView
                android:id="@+id/chattingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_chatting" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_home_on" />

            <TextView
                android:id="@+id/homeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mypage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mypageImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_user_off" />

            <TextView
                android:id="@+id/mypageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_mypage" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>